week01/styles/layout.css
*, body {
    padding:0;
    margin:0;
    box-sizing: border-box;
}

a:link{
    color:white;
}

a:visited{
    color:white;
}

body{
    display:grid;
    grid-template: auto 1fr auto / 1fr auto;
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    height:100vh;
    min-width:600px;
}

footer, main, header, aside{
    padding:20px;
}

header{
    display:block;
    position:relative;
    background-color: steelblue;
    color:white;
    height:150px;
    grid-column:1 / 3;
}

nav{
    background-color: hsl(207, 44%, 30%);
    color:lightgray;
    display:flex;
    justify-content: space-evenly;
    position:absolute;
    bottom:0;
    width:100%;
    margin-left:-20px;
}

nav a{
    padding:15px;
    text-decoration: none;
}

main{
    grid-column:1/2;
}

aside{
    grid-column:2/3;
    width:max(25vw,200px);
    background-color: lightsteelblue;
}

footer{
    grid-column:1/3;
    background-color:steelblue;
    color:white;
    height:200px;
    text-align:center;
}

